# stdsimd

./: .travis.yml  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md
.cargo/: config
ci/: dox.sh  linux-aarch64.sh  nvptx.sh  run-docker.sh  run-qemu.sh  run.sh  test-runner-linux
ci/docker/: qemu-bare-bones-rcS
ci/docker/aarch64-unknown-linux-gnu/: Dockerfile  config  linux-aarch64.sh  test-runner-linux
ci/docker/x86_64-unknown-linux-gnu/: Dockerfile
coresimd/: Cargo.toml  mod.rs  simd_llvm.rs
coresimd/arm/: mod.rs
coresimd/nvptx/: mod.rs
coresimd/ppsv/: mod.rs  ptr.rs
coresimd/ppsv/api/: masked_gather_scatter.rs  mod.rs  ptr.rs
coresimd/ppv/: mod.rs
coresimd/src/: lib.rs
coresimd/src/arm/: neon.rs
coresimd/src/mips/: msa.rs
coresimd/src/powerpc/: altivec.rs  mod.rs
coresimd/src/runtime/: x86.rs
coresimd/src/runtime/linux/: auxv.rs
coresimd/src/x86/i586/: avx2.rs  sse.rs  sse2.rs  sse41.rs  sse42.rs  xsave.rs
coresimd/src/x86/x86_64/: sse.rs  sse2.rs
coresimd/wasm32/: atomic.rs
coresimd/x86/: avx.rs  avx2.rs  cpuid.rs  sse.rs  sse2.rs
crates/assert-instr-macro/src/: lib.rs
crates/coresimd/src/: lib.rs
crates/coresimd/tests/: reductions.rs  v128.rs  v16.rs  v256.rs  v32.rs  v512.rs  v64.rs
crates/nvptx-test/: Cargo.toml  build.rs
crates/nvptx-test/kernel/: Cargo.toml
crates/nvptx-test/kernel/src/: lib.rs
crates/nvptx-test/src/: main.rs
crates/simd-test-macro/src/: lib.rs
crates/stdsimd-test/: Cargo.toml
crates/stdsimd-test/src/: disassembly.rs  lib.rs
crates/stdsimd-verify/: Cargo.toml
crates/stdsimd-verify/src/: lib.rs
crates/stdsimd/src/: lib.rs
src/: lib.rs  macros.rs
src/runtime/: aarch64.rs  arm.rs  bit.rs  cache.rs  cpuinfo.rs  getauxval.rs  libc.rs  mod.rs  storage.rs  x86.rs
src/runtime/arm/: cpuinfo.rs  getauxval.rs  mod.rs
src/runtime/arm/linux/: cpuinfo.rs  getauxval.rs  mod.rs
src/runtime/linux/: cpuinfo.rs  getauxval.rs  mod.rs
src/x86/: macros.rs  mod.rs  sse.rs  sse41.rs
src/x86/i586/: mod.rs  sse.rs  sse2.rs  sse41.rs  sse42.rs
src/x86/i686/: mod.rs  sse.rs  sse2.rs
stdsimd/: mod.rs
stdsimd-rt/: Cargo.toml
stdsimd-rt/src/: aarch64.rs  arm.rs  lib.rs  x86.rs
stdsimd/arch/detect/os/: x86.rs
tests/: cpu-detection.rs
