[package]
name = "stdsimd"
version = "0.0.3"
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Experiments for adding SIMD support to Rust's standard library."
documentation = "https://docs.rs/stdsimd"
homepage = "https://github.com/BurntSushi/stdsimd"
repository = "https://github.com/BurntSushi/stdsimd"
readme = "README.md"
keywords = ["std", "simd", "intrinsics"]
categories = ["hardware-support"]
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "BurntSushi/stdsimd" }
appveyor = { repository = "BurntSushi/stdsimd"  }
is-it-maintained-issue-resolution = { repository = "BurntSushi/stdsimd" }
is-it-maintained-open-issues = { repository = "BurntSushi/stdsimd" }
maintenance = { status = "experimental" }

[dependencies]
coresimd = { path = "coresimd/", version = "0.0.3" }
stdsimd-rt = { path = "stdsimd-rt/", version = "0.0.3", features = [ "std" ] }

[profile.release]
debug = true
opt-level = 3

[profile.bench]
debug = true
opt-level = 3

[dev-dependencies]
cupid = "0.4.0"

[features]
std = []

# Internal-only: denies all warnings.
strict = ["coresimd/strict"]
# Internal-only: enables only those intrinsics supported by Intel's
# Software Development Environment (SDE).
intel_sde = ["coresimd/intel_sde"]