[package]
name = "coresimd"
version = "0.0.3"
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "SIMD support in Rust's core library."
documentation = "https://docs.rs/stdsimd"
homepage = "https://github.com/BurntSushi/stdsimd"
repository = "https://github.com/BurntSushi/stdsimd"
readme = "README.md"
keywords = ["std", "simd", "intrinsics"]
categories = ["hardware-support", "no-std"]
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "BurntSushi/stdsimd" }
appveyor = { repository = "BurntSushi/stdsimd"  }
is-it-maintained-issue-resolution = { repository = "BurntSushi/stdsimd" }
is-it-maintained-open-issues = { repository = "BurntSushi/stdsimd" }
maintenance = { status = "experimental" }
            
[profile.release]
debug = true
opt-level = 3

[profile.bench]
debug = true
opt-level = 3

[dev-dependencies]
stdsimd-test = { version = "0.*", path = "../stdsimd-test" }
stdsimd-rt = { version = "0.0.3", path = "../stdsimd-rt", features = [ ] }
cupid = "0.4.0"

[features]
# Internal-only: denies all warnings.
strict = []
# Internal-only: enables only those intrinsics supported by Intel's
# Software Development Environment (SDE).
intel_sde = []